--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primevue": "^3.47.2",
     "vue": "^3.3.11"
   },
   "devDependencies": {
