--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,12 @@
 {
-    "tabWidth": 4,
     "semi": false,
-    "singleQuote": true
+    "arrowParens": "always",
+    "trailingComma": "es5",
+    "singleQuote": true,
+    "useTabs": true,
+    "tabWidth": 4,
+    "printWidth": 140,
+    "jsxBracketSameLine": true,
+    "proseWrap": "preserve",
+    "bracketSpacing": true
 }
