--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "axios": "^1.6.7",
         "firebase": "^10.8.0",
+        "lodash": "^4.17.21",
         "primeicons": "^6.0.1",
         "primevue": "^3.47.2",
         "vue": "^3.3.11",
